--- a/src/main/webapp/accessDenied.xhtml
+++ b/src/main/webapp/accessDenied.xhtml
@@ -28,7 +28,7 @@
 								<i class="icon-3x icon-user" />
 								<h:outputText value="Trocar usuário" />
 							</h:outputLink></li>
-						<li><h:outputLink value="home">
+						<li><h:outputLink value="/locar/spring/home">
 								<i class="icon-3x icon-home" />
 								<h:outputText value="Ir para a menu Principal" />
 							</h:outputLink></li>
