--- a/src/main/webapp/WEB-INF/flows/categoria/categoria-list.xhtml
+++ b/src/main/webapp/WEB-INF/flows/categoria/categoria-list.xhtml
@@ -29,15 +29,18 @@
 				</p:panel>
 			</h:panelGrid>
 
-			<p:dataTable emptyMessage="Nenhum veículo encontrado"
-				value="#{veiculos}" var="veiculo">
-				<f:facet name="header">Lista de veículos</f:facet>
-				<p:column headerText="Categoria">Categoria</p:column>
-				<p:column headerText="Marca">Marca</p:column>
-				<p:column headerText="Modelo">Modelo</p:column>
-				<p:column headerText="Ano">Ano</p:column>
-				<p:column headerText="Placa">Placa</p:column>
-				<p:column headerText="Ano">Renavan</p:column>
+			<p:dataTable emptyMessage="Nenhum categoria encontrado"
+				value="#{categorias}" var="categoria">
+				<f:facet name="header">Lista de categorias</f:facet>
+				<p:column headerText="Categoria" >Categoria</p:column>
+				<p:column headerText="Valor Diária">0,00</p:column>
+				<p:column headerText="Valor Proteção Parcial">0,00</p:column>
+				<p:column headerText="Valor Proteção Total">0,00</p:column>
+				<p:column headerText="Valor Proteção Ocupantes">0,00</p:column>
+				<p:column headerText="Taxa de Devolução">0,00</p:column>
+				<p:column headerText="Taxa Reposição de Documentos">0,00</p:column>
+				
+				
 				<p:column style="width: 10%;">
 					<p:commandButton icon="ui-icon-pencil" onclick="dgEdit.show();" />
 					<p:commandButton icon="ui-icon-close" onclick="dgDelete.show();" />
@@ -46,7 +49,7 @@
 
 		</h:form>
 
-		<p:dialog widgetVar="dgEdit" modal="true" header="Cadastrar/Editar Veículo"  >
+		<p:dialog widgetVar="dgEdit" modal="true" header="Cadastrar/Editar Categoria"  >
 			<h:form id="formEdit">
 				<h:panelGrid columns="1">
 				Categoria:
