--- a/src/main/webapp/WEB-INF/flows/home/home.xhtml
+++ b/src/main/webapp/WEB-INF/flows/home/home.xhtml
@@ -16,12 +16,12 @@
 							<i class="fa fa-truck fa-4x" />
 						</h:commandLink></li>
 
-					<li><h:commandLink >
+					<li><h:commandLink action="categorias" >
 							<h:outputText value="Categorias" />
 							<i class="fa fa-dot-circle-o fa-4x" />
 						</h:commandLink></li>
 
-					<li><h:commandLink >
+					<li><h:commandLink action="clientes" >
 							<h:outputText value="Clientes" />
 							<i class="fa fa-group fa-4x" />
 						</h:commandLink></li>
