--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -14,7 +14,7 @@
 
 			<h:panelGrid columns="1">
 				<h:outputText value="LoCar" styleClass="systemTitulo">
-					<h:outputText value="PSS " styleClass="steTitulo" />
+					<h:outputText value=".:PSS:. " styleClass="steTitulo" />
 				</h:outputText>
 
 				<h:outputText
