--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -35,12 +35,12 @@
 				action="#{loginController.login()}"
 				ajax="false" styleClass="btn_entrar" />
 				
-				<h:outputText value="Sistema de gerenciamento de locadora de veículos - Avaliação da disciplina de Projeto de Sistemas de Software" />
-				<h:outputText value="Acadêmicos: Eduardo Sutil, Antônio Gabriel e Alex Oliveira" />
-				<h:outputText value="Professor: Donizete" />
+				<h:outputText style="font-weight: bold;" value="Sistema de gerenciamento de locadora de veículos - Avaliação da disciplina de Projeto de Sistemas de Software" />
+				<h:outputText style="font-weight: bold;" value="Acadêmicos: Eduardo Sutil, Antônio Gabriel e Alex Oliveira" />
+				<h:outputText style="font-weight: bold;" value="Professor: Donizete" />
 				<p:spacer height="10" />
-				<h:outputText value="Login: admin" />
-				<h:outputText value="Senha: admin" />
+				<h:outputText style="font-weight: bold; font-size: 20px;" value="Login: admin" />
+				<h:outputText style="font-weight: bold; font-size: 20px;" value="Senha: admin" />
 
 			</h:panelGrid>
 
