relatorio lucro por cliente

--- a/src/main/webapp/WEB-INF/flows/home/home.xhtml
+++ b/src/main/webapp/WEB-INF/flows/home/home.xhtml
@@ -29,8 +29,8 @@
 						</h:commandLink></li>
 
 
-					<li><h:commandLink >
-							<h:outputText value="Locação" />
+					<li><h:commandLink action="locacoes" >
+							<h:outputText value="Locações" />
 							<i class="fa fa-list-alt fa-4x" />
 						</h:commandLink></li>
 						
