--- a/src/main/webapp/WEB-INF/flows/relatorios/menurelatorios.xhtml
+++ b/src/main/webapp/WEB-INF/flows/relatorios/menurelatorios.xhtml
@@ -12,9 +12,9 @@
 			<div class="bts">
 				Menu Relatórios
 				<ul>
-					<li><h:commandLink >
-							<h:outputText value="Locações" />
-							<i class="fa fa-book fa-4x" />
+					<li><h:commandLink action="lucro-por-veiculo" >
+							<h:outputText value="Lucro por veículo" />
+							<i class="fa fa-car fa-4x" />
 						</h:commandLink></li>
 					
 						
