finalização do protótipo

--- a/src/main/webapp/WEB-INF/flows/categoria/categoria-list.xhtml
+++ b/src/main/webapp/WEB-INF/flows/categoria/categoria-list.xhtml
@@ -20,7 +20,7 @@
 				<p:panel>
 					<h:panelGrid columns="6">
 						<p:inputText id="filtro" size="80"></p:inputText>
-						<p:watermark for="filtro" value="Pesquise por Marca/Modelo/Ano/Categoria/Placa/Renavan" />
+						<p:watermark for="filtro" value="Pesquise pelo nome da categoria" />
 						<p:commandButton value="pesquisar" />
 						<p:spacer width="80" height="0" />
 						<p:selectBooleanCheckbox />
@@ -75,7 +75,7 @@
 				Taxa de devoluçao em loja diferente:
 				<p:inputText size="80" />
 				
-				Taxa de reposição de ducumentos:
+				Taxa de reposição de documentos:
 				<p:inputText size="80" />
 
 				</h:panelGrid>
