--- a/src/main/webapp/WEB-INF/flows/relatorios/menurelatorios.xhtml
+++ b/src/main/webapp/WEB-INF/flows/relatorios/menurelatorios.xhtml
@@ -13,7 +13,12 @@
 				Menu Relatórios
 				<ul>
 					<li><h:commandLink action="lucro-por-veiculo" >
-							<h:outputText value="Lucro por veículo" />
+							<h:outputText value="Faturamento por veículo" />
+							<i class="fa fa-car fa-4x" />
+						</h:commandLink></li>
+						
+						<li><h:commandLink action="multas-locacoes" >
+							<h:outputText value="Multas e Locações" />
 							<i class="fa fa-car fa-4x" />
 						</h:commandLink></li>
 					
