--- a/src/main/webapp/WEB-INF/flows/relatorios/lucro-por-veiculo.xhtml
+++ b/src/main/webapp/WEB-INF/flows/relatorios/lucro-por-veiculo.xhtml
@@ -37,7 +37,7 @@
 
 				// Set chart options
 				var options = {
-					'title' : 'Lucro por veículo',
+					'title' : 'Faturamento por veículo',
 					'width' : 450,
 					'height' : 400
 				};
@@ -51,6 +51,24 @@
 	</ui:define>
 
 	<ui:define name="content">
+	
+		<p:panel>
+			<h:panelGrid columns="7" >
+				<h:outputText value="Data Início: " ></h:outputText>
+				<p:calendar ></p:calendar>
+				
+				<h:outputText value="Data Fim: " ></h:outputText>
+				<p:calendar></p:calendar>
+				
+				<h:outputText value="Veículo:" ></h:outputText>
+				<p:autoComplete multiple="true" size="50"
+						completeMethod="#{veiculoController.autocompleteVeiculo}" 
+					 	var="vei" itemLabel="#{vei.modelo}" 
+					 	itemValue="#{vei}" converter="veiculoConverter" 
+					 	value="#{filtro.veiculo}" />
+				<p:commandButton value="Filtar" ></p:commandButton>
+			</h:panelGrid>
+		</p:panel>
 
 		<h:panelGrid columns="2" style="width:100%" >
 
@@ -64,9 +82,8 @@
 				<p:column headerText="Ano">Ano</p:column>
 				<p:column headerText="Placa">Placa</p:column>
 				<p:column headerText="Ano">Renavan</p:column>
-				<p:column style="width: 10%;">
-					<p:commandButton icon="ui-icon-pencil" onclick="dgEdit.show();" />
-					<p:commandButton icon="ui-icon-close" onclick="dgDelete.show();" />
+				<p:column headerText="Valor Faturamento no período" style="width: 10%;">
+					<h:outputText value="R$ 75,00" ></h:outputText>
 				</p:column>
 			</p:dataTable>
 
