ALTERAÇÃO DE BOTÃO

--- a/src/main/webapp/WEB-INF/flows/categoria/categoria-list.xhtml
+++ b/src/main/webapp/WEB-INF/flows/categoria/categoria-list.xhtml
@@ -14,7 +14,7 @@
 			<h:panelGrid columns="2" style="width:100%;" >
 				<p:panel>
 					<h:panelGrid columns="1">
-						<p:commandButton value="Novo" icon="ui-icon-plus"
+						<p:commandButton value="Nova categoria" icon="ui-icon-plus"
 							oncomplete="dgEdit.show();" action="novo" update=":formEdit" />
 					</h:panelGrid>
 				</p:panel>
