--- a/src/main/webapp/WEB-INF/flows/seguranca/perfiledit.xhtml
+++ b/src/main/webapp/WEB-INF/flows/seguranca/perfiledit.xhtml
@@ -7,9 +7,10 @@
 
 
 	<ui:define name="content">
+
 		<h:form id="form">
 			<p:messages />
-			<h:panelGrid columns="1">
+			<h:panelGrid columns="1" style="margin: auto;">
 
 				<h:outputText value="Nome do perfil:" />
 				<p:message for="nome" />
@@ -22,16 +23,19 @@
 				<p:pickList id="pickerPermissoes" converter="permissaoConverter"
 					value="#{perfilBean.permissoesDualList}" var="per" required="true"
 					requiredMessage="Vincule ao menos uma permissão" itemValue="#{per}"
-					showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains"
-					itemLabel="#{per.codigo}">
+					showSourceFilter="true" showTargetFilter="true"
+					filterMatchMode="contains" itemLabel="#{per.codigo}">
 					<f:facet name="sourceCaption">Disponíveis</f:facet>
 					<f:facet name="targetCaption">Vinculados</f:facet>
 				</p:pickList>
-				<p:commandButton value="Cancelar" action="cancelar" immediate="true" />
-				<p:commandButton value="Salvar" action="salvar" update="@form" />
+				<h:panelGrid columns="2">
+
+					<p:commandButton value="Salvar" action="salvar" update="@form" />
+					<p:commandButton value="Cancelar" action="cancelar"
+						immediate="true" />
+				</h:panelGrid>
 			</h:panelGrid>
 		</h:form>
-
 	</ui:define>
 </ui:composition>
 
