--- a/src/main/webapp/WEB-INF/flows/seguranca/useredit.xhtml
+++ b/src/main/webapp/WEB-INF/flows/seguranca/useredit.xhtml
@@ -4,34 +4,39 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	template="/WEB-INF/template/ui.xhtml">
-	
 
-	
+
+
 	<ui:define name="content">
-		<h:form id="form">
-			<p:panel header="Usuário" >
-			<h:panelGrid  columns="1">
+		<div class="div-user">
+			<h:form id="form" style="width: 50%; margin: auto;">
+				<p:panel header="Usuário" style="width: 50%; margin: auto;">
+					<h:panelGrid columns="1">
 				Login:
-				<p:message for="login" ></p:message>
-				<p:inputText id="login" value="#{userBean.login}" required="true" requiredMessage="Informe o login"  />
+				<p:message for="login"></p:message>
+						<p:inputText id="login" value="#{userBean.login}" required="true"
+							requiredMessage="Informe o login" />
 				Perfil:
 				<p:message for="perfil" />
-				<p:selectOneMenu id="perfil" value="#{userBean.perfil}" required="true" 
-								requiredMessage="Escolha um perfil" 
-								converter="perfilUsuarioConverter" >
-					<f:selectItem itemValue="#{null}" itemLabel="Escolha um perfil" />
-					<f:selectItems value="#{perfis}" var="perfil" itemLabel="#{perfil.nome}" itemValue="#{perfil}" />
-				</p:selectOneMenu>
-				
-				<h:panelGrid columns="2" >
-					<p:commandButton value="Salvar" action="salvar" update="@form" />
-					<p:commandButton value="Cancelar" action="cancelar" immediate="true" />
-				</h:panelGrid>
-				
-			</h:panelGrid>
-			</p:panel>
-		</h:form>
-		
+						<p:selectOneMenu id="perfil" value="#{userBean.perfil}"
+							required="true" requiredMessage="Escolha um perfil"
+							converter="perfilUsuarioConverter">
+							<f:selectItem itemValue="#{null}" itemLabel="Escolha um perfil" />
+							<f:selectItems value="#{perfis}" var="perfil"
+								itemLabel="#{perfil.nome}" itemValue="#{perfil}" />
+						</p:selectOneMenu>
+
+						<h:panelGrid columns="2">
+							<p:commandButton value="Salvar" action="salvar" update="@form" />
+							<p:commandButton value="Cancelar" action="cancelar"
+								immediate="true" />
+						</h:panelGrid>
+
+					</h:panelGrid>
+				</p:panel>
+			</h:form>
+		</div>
+
 	</ui:define>
 </ui:composition>
 
