cadastro de lojas e teste de integração para o mesmo

--- a/src/main/webapp/WEB-INF/flows/categoria/categoria-list.xhtml
+++ b/src/main/webapp/WEB-INF/flows/categoria/categoria-list.xhtml
@@ -63,7 +63,7 @@
 				</p:column>
 
 				<p:column style="width: 10%;">
-					<p:commandButton icon="ui-icon-pencil" oncomplete="dgEdit.show();"
+					<p:commandButton rendered="#{cat.ativo}" icon="ui-icon-pencil" oncomplete="dgEdit.show();"
 						action="selecionar" update=":formEdit" />
 					<p:commandButton rendered="#{cat.ativo}" icon="ui-icon-close"
 						onclick="dgDelete.show();" action="selecionarParaExcluir"
