--- a/src/main/webapp/WEB-INF/flows/veiculo/veiculo-list.xhtml
+++ b/src/main/webapp/WEB-INF/flows/veiculo/veiculo-list.xhtml
@@ -19,8 +19,8 @@
 				</p:panel>
 				<p:panel>
 					<h:panelGrid columns="6">
-						<p:inputText id="filtro" size="80"></p:inputText>
-						<p:watermark for="filtro" value="Pesquise por Marca/Modelo/Ano/Categoria/Placa/Renavan" />
+						<p:inputText id="filtro" size="80" ></p:inputText>
+						<p:watermark for="filtro" value="Pesquise por marca, modelo ou placa." />
 						<p:commandButton value="pesquisar" />
 						<p:spacer width="80" height="0" />
 						<p:selectBooleanCheckbox />
